[gd_scene load_steps=5 format=3 uid="uid://bws1cfpc81bbl"]

[ext_resource type="Script" uid="uid://caxrji43m53d1" path="res://addons/nodescript/ui/region_editor.gd" id="1"]
[ext_resource type="Theme" uid="uid://bbkufuj4lk7no" path="res://addons/nodescript/ui/styling/node_script_styling.tres" id="2_ckoyq"]
[ext_resource type="PackedScene" uid="uid://orgselector" path="res://addons/nodescript/ui/org_selector.tscn" id="3"]
[ext_resource type="PackedScene" path="res://addons/nodescript/ui/code_footer.tscn" id="4_codefooter"]

[node name="RegionEditor" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(0, 220)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ckoyq")
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ckoyq")

[node name="VBox" type="VBoxContainer" parent="Margin"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ckoyq")
theme_override_constants/separation = 8

[node name="Panel" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("2_ckoyq")
theme_type_variation = &"panel_header"

[node name="Header" type="HBoxContainer" parent="Margin/VBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_ckoyq")
alignment = 1

[node name="HeaderIcon" type="TextureRect" parent="Margin/VBox/Panel/Header"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("2_ckoyq")
expand_mode = 1
stretch_mode = 5

[node name="HeaderLabel" type="Label" parent="Margin/VBox/Panel/Header"]
layout_mode = 2
theme = ExtResource("2_ckoyq")
theme_type_variation = &"panel_header_text"
text = "Region"
horizontal_alignment = 1

[node name="Form" type="GridContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ckoyq")
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 2

[node name="NameLabel" type="Label" parent="Margin/VBox/Form"]
layout_mode = 2
theme = ExtResource("2_ckoyq")
text = "Name"

[node name="RegionName" type="LineEdit" parent="Margin/VBox/Form"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ckoyq")
placeholder_text = "MyRegion"

[node name="OrgSelector" parent="Margin/VBox" instance=ExtResource("3")]

[node name="Spacer" type="Control" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_ckoyq")

[node name="SignaturePanel" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("2_ckoyq")
theme_type_variation = &"panel_header"

[node name="SignatureHeader" type="HBoxContainer" parent="Margin/VBox/SignaturePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_ckoyq")
theme_override_constants/separation = 6
alignment = 1

[node name="SignatureIcon" type="TextureRect" parent="Margin/VBox/SignaturePanel/SignatureHeader"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("2_ckoyq")
expand_mode = 1
stretch_mode = 5

[node name="SignatureLabel" type="Label" parent="Margin/VBox/SignaturePanel/SignatureHeader"]
layout_mode = 2
theme = ExtResource("2_ckoyq")
theme_type_variation = &"panel_header_text"
text = "Code Output"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" parent="Margin/VBox" instance=ExtResource("4_codefooter")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ckoyq")
theme_override_constants/separation = 8
alignment = 0
[node name="SignaturePreview" parent="Margin/VBox/Buttons"]
text = "#region Region
#endregion Region"
